monitoring/openvpn-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-monitoring
  namespace: vpn
spec:
  type: NodePort
  selector:
    app: openvpn-monitoring
  ports:
    - name: openvpn-tcp
      port: 1195
      targetPort: 1195
      protocol: TCP
      nodePort: 31195
